objects/SFDC_Issue__c.object
<CustomObject>
    <description>プロジェクトで発生した問題</description>
    <fields>
        <fullName>SFDC_Issue_Description__c</fullName>
        <description>問題の詳細な説明</description>
        <label>詳細</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Name__c</fullName>
        <label>件名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Priority__c</fullName>
        <label>優先度</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 低</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - 中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 緊急</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 新規</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 着手済み</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - 他の担当者に割当</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 解決済み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>問題の発生したプロジェクト</description>
        <label>プロジェクト</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>問題</relationshipLabel>
        <relationshipName>R00N10000000JDD3EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>対応内容</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>問題</label>
    <listViews>
        <fullName>View</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>ISS - {0000}</displayFormat>
        <label>管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>